--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "ag-grid-react": "^25.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-excel-renderer": "^1.1.0",
     "react-scripts": "4.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "xlsx": "^0.16.9"
   },
   "scripts": {
     "start": "react-scripts start",
